src/html/css/style.css
.chart-container {
    padding-bottom: 30%;
    min-height: 300px;
    position: relative;
}
.chart {
    width: 100%;
    height: 100%;
    position: absolute;
}
.mainpage-panel-body {
    height: 250px;
}
.history-chart {
    height: 100%;
}
.history-container {
    height: 100%;
    padding-top: 2em;
}
#storage-history-chart-container {
    min-width: 550px;
}
.history-text {
    position: absolute;
}
.graph-green {
    color: #109618;
}
.graph-red {
    color: #dc3912;
}
.graph-orange {
    color: #ff9900;
}
.graph-blue {
    color: #3366cc;
}
.gpio .panel {
    min-height: 22em;
}

